--- a/Bibliografia.bib
+++ b/Bibliografia.bib
@@ -127,7 +127,7 @@
 }
 
 @InProceedings{Wahyu2018,
-  author    = {Endang Wahyu Pamungkas, Alessandra Teresa Cignarella, Valerio Basile, and Viviana Patti},
+  author    = {Endang Wahyu, Alessandra Cignarella, Valerio Basile and Viviana Patti},
   title     = {Exploiting Lexical Knowledge for Detecting Misogyny in English and Spanish Tweets},
   booktitle = {IberEval2018},
   year      = {2018},
