--- a/Plantilla TFM.tex
+++ b/Plantilla TFM.tex
@@ -192,7 +192,20 @@ Trabajo Fin de Máster: Desarrollo de un sistema para la detección del machismo e
 \chapter*{Agradecimientos}
 \label{sec:Agradecimientos}
 
-\noindent Agradecimientos si procede.
+\noindent Quiero aprovechar esta página para expresar mi agradecimiento a todas las personas que me han ayudado a completar este trabajo y me han dado la oportunidad de seguir desarrollándome, tanto intelectual como personalmente.
+
+En primer lugar, a mis directores de trabajo Jorge Amando Carrillo de Albornoz y Laura Plaza Morales, por todo lo que me han enseñado y transmitido durante este año, por aportar sus conocimientos y ser los creadores de esta idea que creo, puede ser de gran utilidad para la sociedad. También me gustaría agradeceros la oportunidad de poder continuar con el trabajo para la tésis doctoral, un reto que me motiva muchísimo y con el que espero aportar mi grano de arena al conocimiento científico.
+
+A Aurora y Jhoni, como etiquetadores, muchas gracias por vuestro trabajo e interés para que este proyecto sea una realidad. Gracias por todas las horas de vuestro tiempo dedicado a mi trabajo. Gracias a vosotros podemos aportar el mayor corpus en castellano etiquetado para la detección del machismo hasta la fecha.
+
+A mis amigos, David, Guille y Juan, por su ánimo y apoyo en todo momento. Pese a los años y, en ocasiones, a la distancia, os tengo muy presentes y agradezco haber encontrado amigos de verdad como vosotros, no cambiéis nunca.
+
+A Aurora, mi novia, por todo lo que ha tenido que aguantar a lo largo de estos años (y lo que nos queda...). Gracias por enseñarme a ser mejor persona, enseñarme a ser más feliz y por tu amor incondicional. Gracias por responder a mis malos días con una sonrisa, con buenas palabras y con tu cariño. Todo lo que hago lo siento como nuestro. Gracias por estar conmigo siempre.
+
+A Nela y Melissa, por vuestro amor real, no lo sabéis, pero me habéis enseñado mucho. Gracias Nela por ayudarme en todos los exámenes que hicimos juntos.
+
+Siempre suelo dejar lo mejor para el final. A Jhoni, mi hermano, me es imposible escribir sobre ti y no emocionarme. Estoy muy orgulloso de ti, eres la mejor persona que he conocido nunca. No te olvides de ser feliz y no cambies nunca. El mundo sería mucho mejor con más personas como tú. Te quiero mucho Jhoni.
+
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -211,9 +224,9 @@ Finalmente, se ha realizado una evaluación exhaustiva del sistema de clasificaci
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter*{Abstract}
 \label{sec:Abstract}
-\noindent The present work defines a new architecture to detect sexism at Twitter. The main goal is to understand the mechanism and textual signals which imply sexist attitudes or language of this kind in spanish. We create a new corpus which contains text with sexist expressions using the social network Twitter as main datasource. To create the corpus, a specific tool is developed to collect all the messages created at Twitter containing certains terms. We search for expressions which underestimate the role of women in our society, encourage the harassment towards them or limit their freedom of speech. There are many expressions used in a daily basis that underestimate the role of women in society. Terms such as ``feminazi'', ``niñata'' or ``a fregar'' have been used to collect tweets in our corpus. We also develop a classification system which allows us to identify sexist language in an automatic way. The system employs several machine learning algorithms and establish two baselines used as reference points for the system's evaluation.
+\noindent The present work defines a new architecture to detect sexism at Twitter. The main goal is to understand the mechanism and textual signals which imply sexist attitudes or language of this kind in spanish. We create a new corpus which contains text with sexist expressions using the social network Twitter as main datasource. A specific tool is developed to collect all the messages created at Twitter containing certain terms. We search for expressions which underestimate the role of women in our society, encourage the harassment towards them or limit their freedom of speech. There are many expressions used in a daily basis that underestimate the role of women in society. Terms such as ``feminazi'', ``niñata'' or ``a fregar'' have been used to collect tweets in our corpus. We also develop a classification system which allows us to identify sexist language in an automatic way. The system employs several machine learning algorithms and establish two baselines used as reference points for the system's evaluation.
 
-Finally, an extensive evaluation is perfomed on the corpus to determine the perform of our approach in the classification task. The results obtained show that this procedure is able to identify sexism properly in the corpus used. However, some limitations and problems have been detected due to the approach used.
+Finally, an extensive evaluation is performed on the corpus to determine the performance of our approach in the classification task. The results obtained show that this procedure is able to identify sexism properly in the corpus used. However, some drawbacks and problems have been detected due to the approach used.
 
 
 
