--- a/capitulos/EstadoArte.tex
+++ b/capitulos/EstadoArte.tex
@@ -71,7 +71,7 @@ Utilizando este modelo, un texto quedará representado como una combinación linea
 \subsubsection{Representación semántica mediante modelo de espacio vectorial}
 \label{sec:Ejemplo_subSeccion} 
 
-\noindent En el apartado anterior, se ha descrito un procedimiento para la representación textual que permite convertir la información contenida en el texto como una combinación lineal de vectores, donde cada coeficiente representa la existencia o no de los términos contenidos en el vocabulario del corpus. A pesar de ser uno de los métodos más simples y utilizados para el problema de clasificación de textos, los documentos y textos que se quieren representar tienen un contenido semántico que no queda representado con este tipo de métodos. Es decir, este método no es capaz de capturar información acerca del significado que tienen los términos que contienen los documentos. Por ejemplo, pensemos en los 3 documentos de ejemplo:
+\noindent En el apartado anterior, se ha descrito un procedimiento para la representación textual que permite expresar la información contenida en el texto como una combinación lineal de vectores, donde cada coeficiente representa la existencia o no de los términos contenidos en el vocabulario del corpus. Sin embargo, una desventaja de este método es su incapacidad para representar la información semántica de los documentos. Es decir, este método no es capaz de capturar información acerca del significado o concepto que contienen los términos presentes en los documentos. Por ejemplo, considérense los siguientes documentos:
 
 	$d_1 = $``\textit{Pizza margarita}''
 
@@ -94,9 +94,9 @@ Utilizando este modelo, un texto quedará representado como una combinación linea
 	\label{tab:my-table}
 \end{table}
 
-Si se realiza una representación de los documentos según el modelo descrito anteriormente (con el número de términos como función de pesado) se obtendría la matriz de la tabla 2.1. Como se puede observar, los documentos $d_1$ y $d_2$ tienen en común un atributo mientras que el documento $d_3$ no tendría ningún rasgo común con el resto de documentos. Sin embargo, si se tiene en cuenta el significado o la representación semántica de los documentos, se concluiría que todos los documentos indican comida italiana y, por tanto, todos tienen en común ese rasgo semántico. Esto indica que si un documento se trata únicamente como una sucesión de términos, se perderán los conceptos a los que hace referencia.
+Si se realiza una representación de los documentos según el modelo descrito anteriormente (con el número de términos como función de pesado) se obtendría la matriz de la tabla 2.1. Como se puede observar, los documentos $d_1$ y $d_2$ tienen en común un atributo mientras que el documento $d_3$ no tendría ningún rasgo común con el resto de documentos. Sin embargo, si se tiene en cuenta el significado o el concepto que expresan los documentos, se concluiría que todos los documentos representan comida italiana y, por tanto, todos tienen en común ese rasgo semántico. Esto indica que si un documento se trata únicamente como una sucesión de términos, se perderán los conceptos a los que hace referencia.
 
-Los métodos para la generación automática de atributos semánticos fueron desarrollados alrededor del año 1990 con el objetivo de capturar la información semántica presente en los documentos. Uno de los algoritmos más populares dentro de esta familia se conoce como LSA (\textit{Latent Semantic Analysis}) \cite{Deerwester1990} o LSI (\textit{Latent Semantic Index}) que describe a cada palabra o conjunto de palabras en un espacio vectorial de dimensión reducida en el que las palabras semánticamente similares se encontrarán más próximas. Para ello, este método toma como entrada una matriz término-documento a la que se le aplica una descomposición de valores singulares (\textit{Singular Value Descomposition}, SVD) obteniendo así una representación vectorial tanto de los términos como de los documentos. De este modo, se puede cuantificar la similitud semántica de dos palabras mediante el uso de medidas de distancias entre vectores. Esta técnica fue rápidamente aplicada a distintos dominios como modelo cognitivo \cite{Landauer1997}, como modelo de lenguaje \cite{Jurafsky1998} o como calificador automático \cite{Rehder1998}.
+Los métodos para la generación automática de atributos semánticos fueron desarrollados alrededor del año 1990 con el objetivo de capturar la información semántica o los conceptos presentes en los documentos. Uno de los algoritmos más populares dentro de esta familia se conoce como LSA (\textit{Latent Semantic Analysis}) \cite{Deerwester1990} que describe a cada palabra o conjunto de palabras en un espacio vectorial de dimensión reducida en el que las palabras semánticamente similares se encontrarán más próximas. Para ello, este método toma como entrada una matriz término-documento a la que se le aplica una descomposición de valores singulares (\textit{Singular Value Descomposition}, SVD) obteniendo así una representación vectorial tanto de los términos como de los documentos. De este modo, se puede cuantificar la similitud semántica de dos palabras mediante el uso de medidas de distancias entre vectores. Esta técnica fue rápidamente aplicada a distintos dominios como la representación de un modelo cognitivo \cite{Landauer1997}, modelo de lenguaje \cite{Jurafsky1998} o calificador automático \cite{Rehder1998}.
 
 Aunque el método LSA se planteó como una variante al modelo de espacio vectorial, hace uso de las mismas formas de representación a la entrada del método. Aquí, el texto se representa en un espacio de coordenadas donde los documentos y los términos se expresan como una combinación de factores semánticos o \textit{topics} subyacentes. De este modo, cuando las palabras están relacionadas, por ejemplo, ``\textit{Pizza}'', ``\textit{Lasaña}'' y ``\textit{Macarrones}'', cabrá esperar que aparecieran en conjuntos similares de documentos. 
 
@@ -111,22 +111,22 @@ En resumen, SVD encuentra la proyección óptima a un espacio de dimensión reducid
 \subsubsection{\textit{Word Embedding}}
 \label{sec:Ejemplo_subSeccion}
 
-\noindent En las secciones previas se han presentado dos métodos que hacen uso del modelo de espacio vectorial para representar los documentos. En el primer apartado, se explicó cómo representar texto mediante un vector en el que las dimensiones corresponden a las palabras en el vocabulario. En esta sección, se presenta un método alternativo para representar términos mediante el uso de vectores de números reales de menor tamaño y más densos (más valores distintos de cero). Este tipo de técnicas se conocen como \textit{word embedding} y han tenido un éxito enorme en numerosas tareas relacionadas con el procesamiento natural del lenguaje en los últimos años \cite{Jacob2019} superando a los métodos empleados tradicionalmente como LSA \cite{Baroni2014}. Mientras que los métodos explicados hasta ahora utilizan el conteo de términos para representar los documentos, los métodos basados en \textit{word embedding} pueden ser vistos como modelos de predicción que intentan predecir los términos alrededor de las palabras. De este modo, estos métodos son capaces de tener en cuenta el contexto en el que se utilizan los términos contenidos en el corpus.
+\noindent En las secciones previas se han presentado dos métodos que hacen uso del modelo de espacio vectorial para representar los documentos. En el primer apartado, se explicó cómo representar texto mediante un vector en el que las dimensiones corresponden a las palabras en el vocabulario. En esta sección, se presenta un método alternativo para representar términos mediante el uso de vectores de números reales de menor tamaño y más densos (más valores distintos de cero). Este tipo de técnicas se conocen como \textit{word embedding} y han tenido un éxito enorme en numerosas tareas relacionadas con el procesamiento natural del lenguaje en los últimos años \cite{Jacob2019} superando a los métodos empleados tradicionalmente como la técnica LSA \cite{Baroni2014} presentada en el apartado anterior. Mientras que los métodos explicados hasta ahora utilizan el conteo de términos para representar los documentos, los métodos basados en \textit{word embedding} pueden ser vistos como modelos de predicción que intentan predecir los términos alrededor de las palabras (o a la inversa). De este modo, estos métodos son capaces de tener en cuenta el contexto en el que se utilizan los términos presentes en el corpus, consiguiendo así capturar la información semántica en su representación.
 
-Como se ha comentado, los vectores obtenidos mediante \textit{word embedding} son más densos y funcionan mejor que las representaciones tradicionales. Aunque no se entienden todas las razones de esta mejora, se tienen ciertas ideas \cite[Capítulo~6]{Jurafsky}. Primero, estos vectores pueden utilizarse de un modo más adecuado como atributos en los sistemas de aprendizaje de máquina debido a la gran reducción de los vectores con los que se trabaja. Asimismo, esta reducción de coeficiente puede ayudar a mejorar la capacidad de generalización del clasificador y a prevenir el sobreajuste. Finalmente, las técnicas de \textit{word embedding} son capaces de capturar la información semántica de los términos. Por ejemplo, los documentos de la tabla 2.1 serán próximos entre sí si se utilizaran este tipo de métodos para representar los términos que contienen.
+Como se ha comentado, los vectores obtenidos mediante \textit{word embedding} son más densos y funcionan mejor que las representaciones tradicionales. Aunque no se entienden todas las razones de esta mejora, se tienen ciertas ideas \cite[Capítulo~6]{Jurafsky}. Primero, estos vectores pueden utilizarse de un modo más adecuado como atributos en los sistemas de aprendizaje de máquina debido a la gran reducción de los vectores con los que se trabaja. Asimismo, esta reducción de coeficiente puede ayudar a mejorar la capacidad de generalización del clasificador y prevenir el sobreajuste. Finalmente, las técnicas de \textit{word embedding} son capaces de capturar la información semántica de los términos. Por ejemplo, los documentos de la tabla 2.1 serán próximos entre sí si se utilizaran este tipo de métodos para representar los términos que contienen.
 
 El término \textit{word embeddings} fue originalmente acuñado en \cite{Bengio2003}, sin embargo, fue en  \cite{Collobert2008} donde se demostró todas las ventajas de este tipo de metodología. Otro hito importante dentro de esta línea de trabajo fue la publicación de \cite{Mikolov2013} en la que se presenta la librería \textit{word2vec}, una de las herramienta más populares que permite entrenar y utilizar modelos pre-entrenados de \textit{word embedding}. Un año después, fue presentado \textit{GloVe} \cite{Pennington2014} confirmando la popularidad de las técnicas de \textit{word embedding}.
 
-El algoritmo \textit{word2vec} se basa en dos técnicas principalmente: \textit{skipgram} \cite{Mikolovb2013} y \textit{negative sampling} \cite{Gutmann2012}. El método \textit{skipgram} es un modelo del lenguaje que, tomando un término como referencia, intenta predecir una ventana de términos alrededor de él. Para ilustrar el proceso, considérese el ejemplo ``Un coche atropelló a David'' y una ventana de cinco palabras (dos hacia delante y dos hacia atrás del término central). El primer paso del algoritmo es generar el conjunto de datos con el que entrenar el modelo de predicción, para ello, se realiza el proceso de la figura 2.2. En la primera iteración, se desplaza la ventana hasta el primer término (como atributo de entrada) y se toman los dos términos posteriores (como salida del modelo de predicción), en este caso, se generan los dos ejemplos de entrenamiento \textit{(Un, coche)} y \textit{(Un, atropelló)}. Este proceso se repite de modo iterativo para todos los términos del corpus, generando un corpus de entrenamiento como el de la figura 2.2.
+El algoritmo \textit{word2vec} se basa en dos técnicas principales: \textit{skipgram} \cite{Mikolovb2013} y \textit{negative sampling} \cite{Gutmann2012}. El método \textit{skipgram} es un modelo del lenguaje que, tomando un término como referencia, intenta predecir una ventana de términos alrededor de él. Para ilustrar el proceso, considérese el ejemplo ``Un coche atropelló a David'' y una ventana de cinco palabras (dos hacia delante y dos hacia atrás del término central). El primer paso del algoritmo es generar el conjunto de datos con el que entrenar el modelo de predicción, para ello, se realiza el proceso de la figura 2.2. En la primera iteración, se desplaza la ventana hasta el primer término (como atributo de entrada) y se toman los dos términos posteriores (como salida del modelo de predicción), en este caso, se generan los dos ejemplos de entrenamiento \textit{(Un, coche)} y \textit{(Un, atropelló)}. Este proceso se repite de modo iterativo para todos los términos del corpus, generando un corpus de entrenamiento como el de la figura 2.2.
 
 \begin{center}
 	\includegraphics[scale=0.4,keepaspectratio]{imagenes/ex_skipgram.png} %[width=4cm,,keepaspectratio]
 	\captionof{figure}{Ejemplo algoritmo skpigram}	
 \end{center}
 
-Un problema de utilizar el corpus generado en la figura 2.2 es que, al ser una palabra de todo el vocabulario la salida del modelo, es necesario indicar una probabilidad para cada elemento del vocabulario. Esto puede ser computacionalmente muy costoso más aún si tenemos en cuenta que pueden existir millones de términos en un único vocabulario. Por ello, en lugar de intentar predecir la palabra ``vecina'' dado un término de entrada, se modifica el enfoque y se realiza la predicción de la probabilidad de que dos palabras sean ``vecinas'' dados dos términos de entrada. De este modo, el corpus de la figura 2.2 se verá modificado y se tendrán ambas palabras como entrada al modelo de predicción y, como etiqueta, se utiliza un ``1'' habitualmente para representar los términos vecinos y un ``0'' para el resto de casos. Sin embargo, en la figura 2.2 todos los ejemplos son vecinos y, por tanto, el corpus solo tendría ejemplos de este tipo para el entrenamiento y cualquier clasificador solo podría predecir este tipo de clase. Por esto, es necesario presentar patrones de entrada que no sean vecinos y, para ello, se utiliza el procedimiento de \textit{negative sampling} o muestreo negativo. En este proceso, se muestrean varios ejemplos negativos (términos que no sean vecinos) para cada caso utilizando el corpus existente. Por tanto, el corpus de la figura 2.2 se completaría con ejemplos negativos de términos de otros documentos del corpus, por ejemplo, en la primera iteración se podría añadir los patrones \textit{(Un, saltar, 0)} o \textit{(Un, violeta, 0)} como ejemplos negativos. Esta técnica aplicada junto con el método \textit{skipgram}, constituyen los dos elementos más importantes en el proceso de entrenamiento de \textit{word2vec}.
+La principal desventaja de utilizar el corpus generado en la figura 2.2 es que, al buscar una palabra del vocabulario como salida del modelo, es necesario indicar una probabilidad para cada elemento del vocabulario. Esto puede ser computacionalmente muy costoso más aún si tenemos en cuenta que pueden existir millones de términos en un único vocabulario. Por ello, en lugar de intentar predecir la palabra ``vecina'' dado un término de entrada, se modifica el enfoque y se realiza la predicción de la probabilidad de que dos palabras sean ``vecinas'' dados dos términos de entrada. De este modo, el corpus de la figura 2.2 se verá modificado y se tendrán ambas palabras como entrada al modelo de predicción y, como etiqueta, se utiliza un ``1'' habitualmente para representar los términos vecinos y un ``0'' para el resto de casos. Sin embargo, en la figura 2.2 todos los ejemplos son vecinos y, por tanto, el corpus solo tendría ejemplos de este tipo para el entrenamiento. Para un correcto funcionamiento del clasificador, es necesario presentar patrones de entrada que no sean vecinos y, para ello, se utiliza el procedimiento de \textit{negative sampling} o muestreo negativo. En este proceso, se muestrean varios ejemplos negativos (términos que no sean vecinos) para cada caso utilizando el corpus existente. Por tanto, el corpus de la figura 2.2 se completaría con ejemplos negativos de términos de otros documentos del corpus, por ejemplo, en la primera iteración se podría añadir los patrones \textit{(Un, saltar, 0)} o \textit{(Un, violeta, 0)} como ejemplos negativos. Esta técnica aplicada junto con el método \textit{skipgram}, constituyen los dos elementos más importantes en el proceso de entrenamiento de \textit{word2vec}.
 
-Previo al proceso de entrenamiento del algoritmo, se establece un tamaño de vocabulario, por ejemplo, 10.000 términos. Tras esto, se crean dos matrices: la matriz \textit{embedding} y la matriz de contexto. Estas dos matrices tendrán tamaño $vxe$ done $v$ corresponde al tamaño del vocabulario y $e$ al número de elementos que contendrá el vector final de números reales con el que se codificará el texto. Estas dos matrices almacenan las palabras del vocabulario y se inicializan sus vectores asociados con valores aleatorios para comenzar el proceso de entrenamiento.
+Previo al entrenamiento del algoritmo, se establece un tamaño de vocabulario, por ejemplo, 10.000 términos. Tras esto, se crean dos matrices: la matriz \textit{embedding} y la matriz de contexto. Estas dos matrices tendrán tamaño $[vxe]$ done $v$ corresponde al tamaño del vocabulario y $e$ al número de elementos que contendrá el vector final de números reales con el que se codificará el texto. Estas dos matrices almacenan las palabras del vocabulario y se inicializan sus vectores asociados con valores aleatorios para comenzar el proceso de entrenamiento.
 
 Para comenzar el entrenamiento, se toma un ejemplo positivo y sus ejemplos negativos asociados. Para el primer caso de la figura 2.2, se tomaría el ejemplo positivo \textit{(Un, coche, 1)} y sus ejemplos negativos asociados \textit{(Un, saltar, 0), (Un, violeta, 0)}. De este modo, se tendrían cuatro palabras: la entrada \textit{Un} y \textit{coche, saltar, violeta} como contexto. En el siguiente paso, se busca la palabra de entrada en la matriz de \textit{embedding} y el resto en la matriz de contexto. A continuación, se realiza el producto escalar para los 3 vectores y se compara el resultado con las etiquetas \textit{(1, 0, 0)} para este caso. En la primera iteración, al estar inicializadas las matrices con valores aleatorios, los resultados no coincidirán con las etiquetas, por tanto, es necesario actualizar las matrices de \textit{embedding} y contexto según el error cometido. Para este proceso, se utiliza el método de descenso de gradiente estocático \cite{Bengio2003}. Este proceso completo se repite para todos los patrones de entrada durante un número de iteraciones que, como resultado, generará la matriz de \textit{embedding} con los vectores de números reales asociados a cada término del vocabulario.
 
@@ -134,9 +134,9 @@ La matriz de \textit{embedding} resultante del proceso de entrenamiento contendr
 
 	\textit{``He ido al banco a ingresar dinero''}
 	
-	\textit{``Me he sentado en el banco a descansar''}
+	\textit{``Me he sentado en el banco del parque''}
 	
-Pese a que el significado del término es distinto, el algoritmo \textit{word2vec} representaría la palabra con el mismo vector. Para abordar este problema, surgen los métodos de \textit{word-embeddings} contextualizados. En este tipo de métodos, en lugar de utilizar un vector fijo para cada término, se observa el contexto en el que se utiliza para asignar un vector con el que codificar la palabra. Dentro de estos métodos destacan ELMo \cite{Matthew2018} y BERT \cite{Jacob2019} que ha alcanzado los mejores resultados hasta la fecha para muchas tareas relacionadas con el procesado del lenguaje.
+Pese a que el significado del término es distinto, el algoritmo \textit{word2vec} representaría la palabra con el mismo vector. Para abordar este problema, surgen los métodos de \textit{word-embeddings} contextualizados. En este tipo de métodos, en lugar de utilizar un vector fijo para cada término, se observa el contexto en el que se utiliza para asignar un vector con el que codificar la palabra. Dentro de estos métodos destacan ELMo \cite{Matthew2018} y BERT \cite{Jacob2019} que ha alcanzado los mejores resultados hasta la fecha para numerosas tareas relacionadas con el procesado del lenguaje.
 
 
 \subsection{Clasificación}
